syntax = "proto3";

package chat_server_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "https://github.com/Zzarin/auth/pkg/chat_server_v1;chat_server_v1";

service ChatServerV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc SendMessage(SendMsgRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    repeated string usernames = 1;
}

message CreateResponse {
    int64 chat_id = 1;
}

message SendMsgRequest {
    int64 chat_id = 1;
    string from = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message DeleteRequest {
    int64 chat_id = 1;
}
